# triage-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: DATASET_GUIDE.md
models/: dataset_final.csv  random_forest_model.pkl  scaler.pkl  xgboost_model.pkl
notebooks/: 01_eda_template.ipynb  triage_ai_complete.ipynb
report/: FINAL_REPORT.md  ensemble_metrics.txt  random_forest_metrics.txt  xgboost_metrics.txt
src/: 01_preprocessing.py  02_random_forest.py  03_xgboost_evaluation.py  04_explainable_ai.py  app.py  clinical_rules.py  config.py  data_merger.py  ensemble.py  generate_synthetic.py  preprocess_ktas.py  synthetic_generator.py  tune_models.py  utils.py
